@@ -27,12 +27,16 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.test.context.ActiveProfiles;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
+import reactor.test.StepVerifier;
 
 import java.time.Duration;
 import java.time.Instant;
@@ -41,8 +45,11 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Stream;
 
 import static it.pagopa.pn.user.attributes.exceptions.PnUserattributesExceptionCodes.ERROR_CODE_USERATTRIBUTES_SENDERIDNOTROOT;
+import static it.pagopa.pn.user.attributes.services.AddressBookService.SAVE_ADDRESS_RESULT.PEC_VALIDATION_REQUIRED;
+import static it.pagopa.pn.user.attributes.services.AddressBookService.SAVE_ADDRESS_RESULT.SUCCESS;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
@@ -50,11 +57,12 @@ import static org.mockito.Mockito.*;
 @ActiveProfiles("test")
 class AddressBookServiceTest {
 
+    private static final String ADDRESS_SERCQ = "x-pagopa-pn-sercq:send-self:notification-already-delivered";
     private final Duration d = Duration.ofMillis(3000);
 
 
+    @Mock
     private AddressBookService addressBookService;
-
 
     private VerificationCodeUtils verificationCodeUtils;
 
@@ -94,49 +102,80 @@ class AddressBookServiceTest {
     AddressBookEntityToLegalDigitalAddressDtoMapper legalDigitalAddressToDto;
 
 
+    private static final String SERCQ_ADDRESS = "x-pagopa-pn-sercq:send-self:notification-already-delivered";
+    private static final String LEGAL_ADDRESS = "email@pec.it";
+    private static final String COURTESY_ADDRESS = "email@email.it";
+
+
+
+
     @BeforeEach
-    void beforeEach(){
+    void beforeEach() {
         verifiedAddressUtils = new VerifiedAddressUtils(addressBookDao);
         verificationCodeUtils = new VerificationCodeUtils(addressBookDao, pnUserattributesConfig, pnDatavaultClient, pnExternalChannelClient, verifiedAddressUtils);
         appIOUtils = new AppIOUtils(addressBookDao, verifiedAddressUtils, ioFunctionServicesClient, ioNotificationService);
         addressBookService = new AddressBookService(addressBookDao, pnDatavaultClient, courtesyDigitalAddressToDto, legalDigitalAddressToDto, pnSelfcareClient, verificationCodeUtils, appIOUtils
-        ,pnExternalRegistryClient, pnUserattributesConfig);
+                , pnExternalRegistryClient, pnUserattributesConfig);
     }
 
 
-
-    @Test
-    void saveLegalAddressBook() {
+    @ParameterizedTest(name = "Test saveLegalAddressBook with channelType {0} and address {1}")
+    @MethodSource("provideLegalChannelTypesAndAddress")
+    void saveLegalAddressBook(LegalChannelTypeDto legalChannelType, String address) {
         //GIVEN
+        final String ROOT_SENDER = "ROOTID";
         String recipientId = "PF-123e4567-e89b-12d3-a456-426714174000";
-        LegalChannelTypeDto legalChannelType = LegalChannelTypeDto.PEC;
         AddressVerificationDto addressVerificationDto = new AddressVerificationDto();
-        addressVerificationDto.setValue("prova@prova.it");
+        addressVerificationDto.setValue(address);
 
         VerificationCodeEntity verificationCode = new VerificationCodeEntity();
         verificationCode.setVerificationCode("12345");
 
-        Mockito.when(addressBookDao.validateHashedAddress(Mockito.anyString(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(AddressBookDao.CHECK_RESULT.NOT_EXISTS));
-        Mockito.when(addressBookDao.saveVerificationCode(Mockito.any())).thenReturn(Mono.just(verificationCode));
-        Mockito.when(pnExternalChannelClient.sendVerificationCode(Mockito.any(), Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.anyString())).thenReturn(Mono.empty());
-        Mockito.when(addressBookDao.getAllVerificationCodesByRecipient(Mockito.any(), Mockito.eq(LegalAddressTypeDto.LEGAL.getValue()))).thenReturn(Flux.empty());
+        Mockito.lenient().when(addressBookDao.validateHashedAddress(Mockito.anyString(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(AddressBookDao.CHECK_RESULT.NOT_EXISTS));
+        Mockito.lenient().when(addressBookDao.saveVerificationCode(Mockito.any())).thenReturn(Mono.just(verificationCode));
+        Mockito.lenient().when(pnExternalChannelClient.sendVerificationCode(Mockito.anyString(), Mockito.anyString(), Mockito.any(), Mockito.any(), Mockito.anyString())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.getAllVerificationCodesByRecipient(Mockito.any(), Mockito.eq(LegalAddressTypeDto.LEGAL.getValue()))).thenReturn(Flux.empty());
+        Mockito.lenient().when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.deleteVerificationCode(any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(pnDatavaultClient.updateRecipientAddressByInternalId(anyString(), anyString(), anyString())).thenReturn(Mono.empty());
+        Mockito.lenient().when(pnUserattributesConfig.getSercqAddress()).thenReturn(SERCQ_ADDRESS);
+        List<LegalDigitalAddressDto> addressList = new ArrayList<>();
+        LegalDigitalAddressDto dto = new LegalDigitalAddressDto();
+        dto.setRecipientId(recipientId);
+        dto.setAddressType(LegalAddressTypeDto.LEGAL);
+        dto.setValue("x-pagopa-pn-sercq:send-self:notification-already-delivered");
+        dto.setChannelType(legalChannelType);
+        dto.setSenderName("default");
+        addressList.add(dto);
 
+        List<AddressBookEntity> listFromDb = new ArrayList<>();
+        listFromDb.add(AddressBookDaoTestIT.newAddress(true));
+        listFromDb.add(AddressBookDaoTestIT.newAddress(false));
+
+        Mockito.lenient().when(pnExternalRegistryClient.getAooUoIdsApi(List.of(ROOT_SENDER))).thenReturn(Flux.empty());
+        Mockito.lenient().when(addressBookDao.getAddresses(Mockito.any(), Mockito.any(), Mockito.any(), anyBoolean())).thenReturn(Flux.fromIterable(listFromDb));
+        Mockito.lenient().when(pnDatavaultClient.deleteRecipientAddressByInternalId(anyString(), anyString())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.deleteAddressBook(Mockito.any(), Mockito.any(), Mockito.any(), any(), eq(true))).thenReturn(Mono.empty());
         // WHEN
-        AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveLegalAddressBook(recipientId, null, legalChannelType, addressVerificationDto, CxTypeAuthFleetDto.PF, null, null)
+        AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveLegalAddressBook(recipientId, null, legalChannelType, addressVerificationDto, CxTypeAuthFleetDto.PF, addressList, null, null)
                 .block(d);
 
         //THEN
         assertNotNull( result );
-        assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.CODE_VERIFICATION_REQUIRED, result);
+        if(!legalChannelType.equals(LegalChannelTypeDto.SERCQ)) {
+            assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.CODE_VERIFICATION_REQUIRED, result);
+        } else {
+            assertEquals(SUCCESS, result);
+        }
     }
 
-    @Test
-    void saveLegalAddressBookWithVerificationCode() {
+    @ParameterizedTest(name = "Test saveLegalAddressBook with channelType {0}")
+    @MethodSource("provideLegalChannelTypesAndAddress")
+    void saveLegalAddressBookWithVerificationCode(LegalChannelTypeDto legalChannelType, String address) {
         //GIVEN
         String recipientId = "PF-123e4567-e89b-12d3-a456-426714174000";
-        LegalChannelTypeDto legalChannelType = LegalChannelTypeDto.PEC;
         AddressVerificationDto addressVerificationDto = new AddressVerificationDto();
-        addressVerificationDto.setValue("prova@prova.it");
+        addressVerificationDto.setValue(address);
         addressVerificationDto.setVerificationCode("12345");
 
         VerificationCodeEntity verificationCode = new VerificationCodeEntity("recipientId", "hashed", legalChannelType.getValue(), null, LegalAddressTypeDto.LEGAL.getValue(), addressVerificationDto.getValue());
@@ -145,59 +184,74 @@ class AddressBookServiceTest {
         verificationCode.setLastModified(Instant.now().minusSeconds(1));
 
         Mockito.when(addressBookDao.validateHashedAddress(Mockito.anyString(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(AddressBookDao.CHECK_RESULT.NOT_EXISTS));
-        Mockito.when(addressBookDao.getVerificationCode(Mockito.any())).thenReturn(Mono.just(verificationCode));
-        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.getVerificationCode(Mockito.any())).thenReturn(Mono.just(verificationCode));
+        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(pnDatavaultClient.updateRecipientAddressByInternalId(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
-        Mockito.when(pnUserattributesConfig.getVerificationcodettl()).thenReturn(Duration.ofSeconds(10));
-
+        Mockito.lenient().when(pnUserattributesConfig.getVerificationcodettl()).thenReturn(Duration.ofSeconds(10));
+        Mockito.lenient().when(pnUserattributesConfig.getSercqAddress()).thenReturn(SERCQ_ADDRESS);
+        Mockito.lenient().when(pnDatavaultClient.deleteRecipientAddressByInternalId(anyString(), anyString())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.deleteAddressBook(Mockito.any(), Mockito.any(), Mockito.any(), any(), eq(true))).thenReturn(Mono.empty());
+        List<LegalDigitalAddressDto> legalDigitalAddressDtos = new ArrayList<>();
+        List<String> pnCxGroups = new ArrayList<>();
+        List<String> ids = new ArrayList<>();
+        ids.add("default");
+        LegalDigitalAddressDto dto = new LegalDigitalAddressDto();
+        dto.setRecipientId(recipientId);
+        dto.setAddressType(LegalAddressTypeDto.LEGAL);
+        dto.setValue("x-pagopa-pn-sercq:send-self:notification-already-delivered");
+        dto.setChannelType(legalChannelType);
+        dto.setSenderName("default");
+        legalDigitalAddressDtos.add(dto);
+        Mockito.lenient().when(pnExternalRegistryClient.getAooUoIdsApi(ids)).thenReturn(Flux.empty());
         // WHEN
-        AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveLegalAddressBook(recipientId, null, legalChannelType, addressVerificationDto)
+        AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveLegalAddressBook(recipientId, "default", legalChannelType, addressVerificationDto, CxTypeAuthFleetDto.PF,legalDigitalAddressDtos,pnCxGroups, "role")
                 .block(d);
 
         //THEN
-        assertNotNull( result );
-        assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.SUCCESS, result);
+        assertNotNull(result);
+        assertEquals(SUCCESS, result);
     }
 
-    @Test
-    void saveLegalAddressBookWithInvalidVerificationCode() {
+    @ParameterizedTest(name = "Test saveLegalAddressBook with channelType {0}")
+    @MethodSource("provideLegalChannelTypesAndAddressForVerificationCode")
+    void saveLegalAddressBookWithInvalidVerificationCode(LegalChannelTypeDto legalChannelType, String address) {
         //GIVEN
 
         String recipientId = "PF-123e4567-e89b-12d3-a456-426714174000";
         String senderId = null;
-        LegalChannelTypeDto legalChannelType = LegalChannelTypeDto.PEC;
         AddressVerificationDto addressVerificationDto = new AddressVerificationDto();
-        addressVerificationDto.setValue("prova@prova.it");
+        addressVerificationDto.setValue(address);
         addressVerificationDto.setVerificationCode("12345");
 
         VerificationCodeEntity verificationCode = new VerificationCodeEntity();
         verificationCode.setVerificationCode("55555");
         verificationCode.setLastModified(Instant.now().minusSeconds(1));
 
-        Mockito.when(addressBookDao.validateHashedAddress(Mockito.anyString(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(AddressBookDao.CHECK_RESULT.NOT_EXISTS));
-        Mockito.when(addressBookDao.getVerificationCode(Mockito.any())).thenReturn(Mono.just(verificationCode));
-        Mockito.when(pnUserattributesConfig.getVerificationcodettl()).thenReturn(Duration.ofSeconds(10));
-        Mockito.when(pnUserattributesConfig.getValidationcodemaxattempts()).thenReturn(3);
-        Mockito.when(addressBookDao.updateVerificationCodeIfExists(Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.validateHashedAddress(Mockito.anyString(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(AddressBookDao.CHECK_RESULT.NOT_EXISTS));
+        Mockito.lenient().when(addressBookDao.getVerificationCode(Mockito.any())).thenReturn(Mono.just(verificationCode));
+        Mockito.lenient().when(pnUserattributesConfig.getVerificationcodettl()).thenReturn(Duration.ofSeconds(10));
+        Mockito.lenient().when(pnUserattributesConfig.getValidationcodemaxattempts()).thenReturn(3);
+        Mockito.lenient().when(addressBookDao.updateVerificationCodeIfExists(Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), anyList())).thenReturn(Mono.empty());
 
         // WHEN
-        Mono<AddressBookService.SAVE_ADDRESS_RESULT> mono = addressBookService.saveLegalAddressBook(recipientId, senderId, legalChannelType, addressVerificationDto);
+        Mono<AddressBookService.SAVE_ADDRESS_RESULT> mono = addressBookService.saveLegalAddressBook(recipientId, null, legalChannelType, addressVerificationDto, CxTypeAuthFleetDto.PF, new ArrayList<>(), new ArrayList<>(), "role");
 
         //THEN
         assertThrows(PnInvalidVerificationCodeException.class, () -> mono.block(d));
 
     }
 
-    @Test
-    void saveLegalAddressBookWithInvalidVerificationCodeTooLate() {
+    @ParameterizedTest(name = "Test saveLegalAddressBook with channelType {0}")
+    @MethodSource("provideLegalChannelTypesAndAddressForVerificationCode")
+    void saveLegalAddressBookWithInvalidVerificationCodeTooLate(LegalChannelTypeDto legalChannelType, String address) {
         //GIVEN
 
         String recipientId = "PF-123e4567-e89b-12d3-a456-426714174000";
         String senderId = null;
-        LegalChannelTypeDto legalChannelType = LegalChannelTypeDto.PEC;
         AddressVerificationDto addressVerificationDto = new AddressVerificationDto();
-        addressVerificationDto.setValue("prova@prova.it");
+        addressVerificationDto.setValue(address);
         addressVerificationDto.setVerificationCode("12345");
 
         VerificationCodeEntity verificationCode = new VerificationCodeEntity("recipientId", "hashed", legalChannelType.getValue(), null, LegalAddressTypeDto.LEGAL.getValue(), addressVerificationDto.getValue());
@@ -207,14 +261,14 @@ class AddressBookServiceTest {
         verificationCode.setCreated(Instant.now().minus(1000, ChronoUnit.MINUTES));
 
         Mockito.when(addressBookDao.validateHashedAddress(Mockito.anyString(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(AddressBookDao.CHECK_RESULT.NOT_EXISTS));
-        Mockito.when(addressBookDao.getVerificationCode(Mockito.any())).thenReturn(Mono.just(verificationCode));
-        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.getVerificationCode(Mockito.any())).thenReturn(Mono.just(verificationCode));
+        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(pnDatavaultClient.updateRecipientAddressByInternalId(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(pnUserattributesConfig.getVerificationcodettl()).thenReturn(Duration.ofSeconds(10));
         Mockito.when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
 
         // WHEN
-        Mono<AddressBookService.SAVE_ADDRESS_RESULT> mono = addressBookService.saveLegalAddressBook(recipientId, senderId, legalChannelType, addressVerificationDto);
+        Mono<AddressBookService.SAVE_ADDRESS_RESULT> mono = addressBookService.saveLegalAddressBook(recipientId, null, legalChannelType, addressVerificationDto, CxTypeAuthFleetDto.PF, new ArrayList<>(), new ArrayList<>(), "role");
         assertThrows(PnExpiredVerificationCodeException.class, () -> mono.block(d));
 
         verificationCode.setLastModified(Instant.now().minus(1, ChronoUnit.SECONDS));
@@ -224,126 +278,192 @@ class AddressBookServiceTest {
 
 
         // WHEN
-        Mono<AddressBookService.SAVE_ADDRESS_RESULT> mono_ok = addressBookService.saveLegalAddressBook(recipientId, senderId, legalChannelType, addressVerificationDto);
-        assertDoesNotThrow(() -> mono_ok.block(d));
+        Mono<AddressBookService.SAVE_ADDRESS_RESULT> monoOk = addressBookService.saveLegalAddressBook(recipientId, null, legalChannelType, addressVerificationDto, CxTypeAuthFleetDto.PF, new ArrayList<>(), new ArrayList<>(), "role");
+        assertDoesNotThrow(() -> monoOk.block(d));
 
         //THEN
     }
 
 
-    @Test
-    void saveLegalAddressBookWithVerificationCodeRequestId() {
+    @ParameterizedTest(name = "Test saveLegalAddressBook with channelType {0}")
+    @MethodSource("provideLegalChannelTypesAndAddress")
+    void saveLegalAddressBookWithVerificationCodeRequestId(LegalChannelTypeDto legalChannelType, String address) {
         //GIVEN
         String recipientId = "PF-123e4567-e89b-12d3-a456-426714174000";
         String uuid = UUID.randomUUID().toString();
-        LegalChannelTypeDto legalChannelType = LegalChannelTypeDto.PEC;
         AddressVerificationDto addressVerificationDto = new AddressVerificationDto();
         addressVerificationDto.setRequestId(uuid);
-        addressVerificationDto.setVerificationCode("12345");
-
+        if(!legalChannelType.equals(LegalChannelTypeDto.SERCQ)) {
+            addressVerificationDto.setVerificationCode("12345");
+        }
+        addressVerificationDto.setValue(address);
         VerificationCodeEntity verificationCode = new VerificationCodeEntity(recipientId, "hashed", legalChannelType.getValue(), null, LegalAddressTypeDto.LEGAL.getValue(), "pec@pec.it");
         verificationCode.setVerificationCode("12345");
         verificationCode.setPecValid(true);
         verificationCode.setLastModified(Instant.now().minusSeconds(1));
 
-        Mockito.when(addressBookDao.getVerificationCodeByRequestId(Mockito.any())).thenReturn(Mono.just(verificationCode));
-        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
-        Mockito.when(pnDatavaultClient.updateRecipientAddressByInternalId(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
-        Mockito.when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
-        Mockito.when(pnUserattributesConfig.getVerificationcodettl()).thenReturn(Duration.ofSeconds(10));
+        List<String> pnCxGroups = new ArrayList<>();
+        List<LegalDigitalAddressDto> addressList = new ArrayList<>();
+        LegalDigitalAddressDto dto = new LegalDigitalAddressDto();
+        dto.setRecipientId(recipientId);
+        dto.setAddressType(LegalAddressTypeDto.LEGAL);
+        dto.setValue("x-pagopa-pn-sercq:send-self:notification-already-delivered");
+        dto.setChannelType(legalChannelType);
+        dto.setSenderName("default");
+        addressList.add(dto);
+
+
+        Mockito.lenient().when(addressBookDao.getVerificationCodeByRequestId(Mockito.any())).thenReturn(Mono.just(verificationCode));
+            Mockito.lenient().when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+            Mockito.lenient().when(pnDatavaultClient.updateRecipientAddressByInternalId(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+            Mockito.lenient().when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
+            Mockito.lenient().when(pnUserattributesConfig.getVerificationcodettl()).thenReturn(Duration.ofSeconds(10));
+            Mockito.lenient().when(addressBookDao.validateHashedAddress(anyString(), anyString(), anyString())).thenReturn(Mono.just(AddressBookDao.CHECK_RESULT.ALREADY_VALIDATED));
+            Mockito.lenient().when(pnUserattributesConfig.getSercqAddress()).thenReturn(SERCQ_ADDRESS);
+        Mockito.lenient().when(pnDatavaultClient.deleteRecipientAddressByInternalId(anyString(), anyString())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.deleteAddressBook(Mockito.any(), Mockito.any(), Mockito.any(), any(), eq(true))).thenReturn(Mono.empty());
+
 
         // WHEN
-        AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveLegalAddressBook(recipientId, null, legalChannelType, addressVerificationDto)
-                .block(d);
+        AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveLegalAddressBook(recipientId, null, legalChannelType, addressVerificationDto, CxTypeAuthFleetDto.PF, addressList, pnCxGroups, "role").block();
 
         //THEN
-        assertNotNull( result );
-        assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.SUCCESS, result);
+        assertNotNull(result);
+        assertEquals(SUCCESS, result);
     }
 
-    @Test
-    void saveLegalAddressBookWithInvalidVerificationCodePecNotValid() {
+    @ParameterizedTest(name = "Test saveLegalAddressBook with channelType {0} with expected result: {1}")
+    @MethodSource("provideLegalChannelTypesAndResults")
+    void saveLegalAddressBookWithInvalidVerificationCodePecNotValid(LegalChannelTypeDto legalChannelType, AddressBookService.SAVE_ADDRESS_RESULT expectedResult, String address) {
         //GIVEN
+        final String ROOT_SENDER = "ROOTID";
 
         String recipientId = "PF-123e4567-e89b-12d3-a456-426714174000";
         String senderId = null;
-        LegalChannelTypeDto legalChannelType = LegalChannelTypeDto.PEC;
         AddressVerificationDto addressVerificationDto = new AddressVerificationDto();
-        addressVerificationDto.setValue("prova@prova.it");
+        addressVerificationDto.setValue(address);
         addressVerificationDto.setVerificationCode("12345");
 
         VerificationCodeEntity verificationCode = new VerificationCodeEntity("recipientId", "hashed", legalChannelType.getValue());
         verificationCode.setVerificationCode("12345");
         verificationCode.setLastModified(Instant.now().minus(1, ChronoUnit.SECONDS));
         verificationCode.setCreated(Instant.now().minus(1, ChronoUnit.SECONDS));
+        verificationCode.setAddress("prova@prova.it");
+
+        List<String> pnCxGroups = new ArrayList<>();
+        List<LegalDigitalAddressDto> addressList = new ArrayList<>();
+        LegalDigitalAddressDto dto = new LegalDigitalAddressDto();
+        dto.setRecipientId(recipientId);
+        dto.setAddressType(LegalAddressTypeDto.LEGAL);
+        dto.setValue("x-pagopa-pn-sercq:send-self:notification-already-delivered");
+        dto.setChannelType(legalChannelType);
+        dto.setSenderName("default");
+        addressList.add(dto);
 
         Mockito.when(addressBookDao.validateHashedAddress(Mockito.anyString(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(AddressBookDao.CHECK_RESULT.NOT_EXISTS));
-        Mockito.when(addressBookDao.getVerificationCode(Mockito.any())).thenReturn(Mono.just(verificationCode));
-        Mockito.when(pnUserattributesConfig.getVerificationcodettl()).thenReturn(Duration.ofSeconds(10));
-        Mockito.when(pnUserattributesConfig.getVerificationcodelegalttl()).thenReturn(Duration.ofSeconds(100));
-        Mockito.when(addressBookDao.updateVerificationCodeIfExists(Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.getVerificationCode(Mockito.any())).thenReturn(Mono.just(verificationCode));
+        Mockito.lenient().when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(pnDatavaultClient.updateRecipientAddressByInternalId(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(pnUserattributesConfig.getVerificationcodettl()).thenReturn(Duration.ofSeconds(10));
+        Mockito.lenient().when(pnUserattributesConfig.getVerificationcodelegalttl()).thenReturn(Duration.ofSeconds(100));
+        Mockito.lenient().when(pnUserattributesConfig.getSercqAddress()).thenReturn(SERCQ_ADDRESS);
+        Mockito.lenient().when(addressBookDao.updateVerificationCodeIfExists(Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(pnDatavaultClient.deleteRecipientAddressByInternalId(anyString(), anyString())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.deleteAddressBook(Mockito.any(), Mockito.any(), Mockito.any(), any(), eq(true))).thenReturn(Mono.empty());
 
         // WHEN
-        Mono<AddressBookService.SAVE_ADDRESS_RESULT> mono_ok = addressBookService.saveLegalAddressBook(recipientId, senderId, legalChannelType, addressVerificationDto);
-        AddressBookService.SAVE_ADDRESS_RESULT res = mono_ok.block(d);
+        Mono<AddressBookService.SAVE_ADDRESS_RESULT> monoOk = addressBookService.saveLegalAddressBook(recipientId, null, legalChannelType, addressVerificationDto, CxTypeAuthFleetDto.PF, addressList, pnCxGroups, "role");
+        AddressBookService.SAVE_ADDRESS_RESULT res = monoOk.block(d);
 
         //THEN
-        assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.PEC_VALIDATION_REQUIRED, res);
+        assertEquals(expectedResult, res);
     }
 
-    @Test
-    void saveLegalAddressBookWithInvalidVerificationCodeTooLateLastModified() {
+    @ParameterizedTest(name = "Test saveLegalAddressBook with channelType {0}")
+    @MethodSource("provideLegalChannelTypesAndAddress")
+    void saveLegalAddressBookWithInvalidVerificationCodeTooLateLastModified(LegalChannelTypeDto legalChannelType, String address) {
         //GIVEN
 
         String recipientId = "PF-123e4567-e89b-12d3-a456-426714174000";
         String senderId = null;
-        LegalChannelTypeDto legalChannelType = LegalChannelTypeDto.PEC;
         AddressVerificationDto addressVerificationDto = new AddressVerificationDto();
-        addressVerificationDto.setValue("prova@prova.it");
+        addressVerificationDto.setValue(address);
         addressVerificationDto.setVerificationCode("12345");
 
         VerificationCodeEntity verificationCode = new VerificationCodeEntity("recipientId", "hashed", legalChannelType.getValue());
         verificationCode.setVerificationCode("12345");
         verificationCode.setLastModified(Instant.now().minus(1, ChronoUnit.SECONDS));
         verificationCode.setCreated(Instant.now().minus(1000, ChronoUnit.SECONDS));
-
-        Mockito.when(addressBookDao.validateHashedAddress(Mockito.anyString(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(AddressBookDao.CHECK_RESULT.NOT_EXISTS));
-        Mockito.when(addressBookDao.getVerificationCode(Mockito.any())).thenReturn(Mono.just(verificationCode));
-        Mockito.when(pnUserattributesConfig.getVerificationcodettl()).thenReturn(Duration.ofSeconds(10));
-        Mockito.when(addressBookDao.updateVerificationCodeIfExists(Mockito.any())).thenReturn(Mono.empty());
+        verificationCode.setAddress("prova@prova.it");
+        List<LegalDigitalAddressDto> addressList = new ArrayList<>();
+        LegalDigitalAddressDto dto = new LegalDigitalAddressDto();
+        dto.setRecipientId(recipientId);
+        dto.setAddressType(LegalAddressTypeDto.LEGAL);
+        dto.setValue("x-pagopa-pn-sercq:send-self:notification-already-delivered");
+        dto.setChannelType(legalChannelType);
+        dto.setSenderName("default");
+        addressList.add(dto);
+        List<String> pnCxGroups = new ArrayList<>();
 
 
         // WHEN
-        Mono<AddressBookService.SAVE_ADDRESS_RESULT> mono_ok = addressBookService.saveLegalAddressBook(recipientId, senderId, legalChannelType, addressVerificationDto);
-        assertDoesNotThrow(() -> mono_ok.block(d));
+        Mockito.when(addressBookDao.validateHashedAddress(Mockito.anyString(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(AddressBookDao.CHECK_RESULT.NOT_EXISTS));
+        Mockito.lenient().when(addressBookDao.getVerificationCode(Mockito.any())).thenReturn(Mono.just(verificationCode));
+        Mockito.lenient().when(pnUserattributesConfig.getVerificationcodettl()).thenReturn(Duration.ofSeconds(10));
+        Mockito.lenient().when(addressBookDao.updateVerificationCodeIfExists(Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(pnDatavaultClient.updateRecipientAddressByInternalId(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(pnUserattributesConfig.getSercqAddress()).thenReturn(SERCQ_ADDRESS);
+        Mockito.lenient().when(pnDatavaultClient.deleteRecipientAddressByInternalId(anyString(), anyString())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.deleteAddressBook(Mockito.any(), Mockito.any(), Mockito.any(), any(), eq(true))).thenReturn(Mono.empty());
 
         //THEN
+        Mono<AddressBookService.SAVE_ADDRESS_RESULT> monoOk = addressBookService.saveLegalAddressBook(recipientId, null, legalChannelType, addressVerificationDto, CxTypeAuthFleetDto.PF, addressList, pnCxGroups, "role");
+        assertDoesNotThrow(() -> monoOk.block(d));
+
     }
 
-    @Test
-    void saveLegalAddressBookWithAlreadyVerified() {
+
+
+    @ParameterizedTest(name = "Test saveLegalAddressBook with channelType {0}")
+    @MethodSource("provideLegalChannelTypesAndAddress")
+    void saveLegalAddressBookWithAlreadyVerified(LegalChannelTypeDto legalChannelType, String address) {
         //GIVEN
 
         String recipientId = "PF-123e4567-e89b-12d3-a456-426714174000";
         String senderId = null;
-        LegalChannelTypeDto legalChannelType = LegalChannelTypeDto.PEC;
         AddressVerificationDto addressVerificationDto = new AddressVerificationDto();
-        addressVerificationDto.setValue("prova@prova.it");
+        addressVerificationDto.setValue(address);
 
         VerificationCodeEntity verificationCode = new VerificationCodeEntity();
         verificationCode.setVerificationCode("12345");
 
+        List<LegalDigitalAddressDto> addressList = new ArrayList<>();
+        List<String> pnCxGroups = new ArrayList<>();
+        LegalDigitalAddressDto dto = new LegalDigitalAddressDto();
+        dto.setRecipientId(recipientId);
+        dto.setAddressType(LegalAddressTypeDto.LEGAL);
+        dto.setValue("x-pagopa-pn-sercq:send-self:notification-already-delivered");
+        dto.setChannelType(legalChannelType);
+        dto.setSenderName("default");
+        addressList.add(dto);
+
         Mockito.when(addressBookDao.validateHashedAddress(Mockito.anyString(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(AddressBookDao.CHECK_RESULT.ALREADY_VALIDATED));
-        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(pnDatavaultClient.updateRecipientAddressByInternalId(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(pnUserattributesConfig.getSercqAddress()).thenReturn(SERCQ_ADDRESS);
+        Mockito.lenient().when(pnDatavaultClient.deleteRecipientAddressByInternalId(anyString(), anyString())).thenReturn(Mono.empty());
+        Mockito.lenient().when(addressBookDao.deleteAddressBook(Mockito.any(), Mockito.any(), Mockito.any(), any(), eq(true))).thenReturn(Mono.empty());
 
         // WHEN
-        AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveLegalAddressBook(recipientId, senderId, legalChannelType, addressVerificationDto).block(d);
+        AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveLegalAddressBook(recipientId, null, legalChannelType, addressVerificationDto, CxTypeAuthFleetDto.PF, addressList, pnCxGroups, "role").block(d);
 
         //THEN
-        assertNotNull( result );
-        assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.SUCCESS, result);
+        assertNotNull(result);
+        assertEquals(SUCCESS, result);
     }
 
     @Test
@@ -368,7 +488,7 @@ class AddressBookServiceTest {
         AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveCourtesyAddressBook(recipientId, senderId, courtesyChannelType, addressVerificationDto).block(d);
 
         //THEN
-        assertNotNull( result );
+        assertNotNull(result);
         assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.CODE_VERIFICATION_REQUIRED, result);
     }
 
@@ -400,7 +520,7 @@ class AddressBookServiceTest {
         AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveCourtesyAddressBook(recipientId, senderId, courtesyChannelType, addressVerificationDto).block(d);
 
         //THEN
-        assertNotNull( result );
+        assertNotNull(result);
         assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.CODE_VERIFICATION_REQUIRED, result);
         verify(addressBookDao).deleteVerificationCode(verificationCodeOLD);
     }
@@ -433,7 +553,7 @@ class AddressBookServiceTest {
         AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveCourtesyAddressBook(recipientId, senderId, courtesyChannelType, addressVerificationDto).block(d);
 
         //THEN
-        assertNotNull( result );
+        assertNotNull(result);
         assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.CODE_VERIFICATION_REQUIRED, result);
         verify(addressBookDao, never()).deleteVerificationCode(verificationCodeOLD);
     }
@@ -459,7 +579,7 @@ class AddressBookServiceTest {
                 .block(d);
 
         //THEN
-        assertNotNull( result );
+        assertNotNull(result);
         assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.CODE_VERIFICATION_REQUIRED, result);
     }
 
@@ -519,14 +639,13 @@ class AddressBookServiceTest {
         verificationCode.setVerificationCode("12345");
 
         // WHEN
-        PnInvalidInputException thrown = assertThrows(PnInvalidInputException.class, () ->
+         assertThrows(PnInvalidInputException.class, () ->
         {
             addressBookService.saveCourtesyAddressBook(recipientId, null, courtesyChannelType, addressVerificationDto).block();
         });
 
         //THEN
     }
-
 
 
     @Test
@@ -552,24 +671,45 @@ class AddressBookServiceTest {
     }
 
 
-    @Test
-    void saveCourtesyAddressBookPEC_invalid() {
+    @ParameterizedTest(name = "Test saveCourtesyAddressBook with channelType {0}")
+    @MethodSource("provideLegalChannelTypes")
+    void saveCourtesyAddressBookPEC_invalid(LegalChannelTypeDto legalChannelType) {
         //GIVEN
 
         String recipientId = "PF-123e4567-e89b-12d3-a456-426714174000";
         String senderId = null;
-        LegalChannelTypeDto legalChannelTypeDto = LegalChannelTypeDto.PEC;
+        LegalChannelTypeDto legalChannelTypeDto = legalChannelType;
         AddressVerificationDto addressVerificationDto = new AddressVerificationDto();
-        addressVerificationDto.setValue("abcd");
+        if(legalChannelTypeDto.equals(LegalChannelTypeDto.SERCQ)) {
+            addressVerificationDto.setValue("xxx123");
+        }
+       // addressVerificationDto.setValue("abcd");
+        addressVerificationDto.setVerificationCode("12345");
+        List<LegalDigitalAddressDto> addressList = new ArrayList<>();
+        LegalDigitalAddressDto dto = new LegalDigitalAddressDto();
+        dto.setRecipientId(recipientId);
+        dto.setAddressType(LegalAddressTypeDto.LEGAL);
+        dto.setValue("x-pagopa-pn-sercq:send-self:notification-already-delivered");
+        dto.setChannelType(legalChannelType);
+        dto.setSenderName("default");
+        addressList.add(dto);
+        List<String> groups = new ArrayList<>();
+        System.out.println("addressList " + addressList);
+        List<String> ids = new ArrayList<>();
+        ids.add("root");
 
         // WHEN
-        assertThrows(PnInvalidInputException.class, () -> {
-            addressBookService.saveLegalAddressBook(recipientId, senderId, legalChannelTypeDto, addressVerificationDto).block();
-        });
+        Mockito.lenient().when(addressBookDao.validateHashedAddress(Mockito.anyString(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(AddressBookDao.CHECK_RESULT.ALREADY_VALIDATED));
+        Mockito.lenient().when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(pnUserattributesConfig.getSercqAddress()).thenReturn(SERCQ_ADDRESS);
+        Mockito.lenient().when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
+        Mockito.lenient().when(pnDatavaultClient.updateRecipientAddressByInternalId(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
 
         //THEN
+         assertThrows(PnInvalidInputException.class, () -> {
+            addressBookService.saveLegalAddressBook(recipientId, senderId, legalChannelTypeDto, addressVerificationDto, CxTypeAuthFleetDto.PF, addressList, groups, "role").block();
+        });
     }
-
 
 
     @Test
@@ -582,7 +722,7 @@ class AddressBookServiceTest {
 
         Mockito.when(addressBookDao.getAddressBook(Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(ioFunctionServicesClient.upsertServiceActivation(Mockito.any(), Mockito.anyBoolean())).thenReturn(Mono.just(true));
-        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(ioNotificationService.scheduleCheckNotificationToSendAfterIOActivation(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
 
@@ -590,8 +730,8 @@ class AddressBookServiceTest {
         AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveCourtesyAddressBook(recipientId, senderId, courtesyChannelType, new AddressVerificationDto()).block(d);
 
         //THEN
-        assertNotNull( result );
-        assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.SUCCESS, result);
+        assertNotNull(result);
+        assertEquals(SUCCESS, result);
     }
 
 
@@ -605,7 +745,7 @@ class AddressBookServiceTest {
 
         Mockito.when(addressBookDao.getAddressBook(Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(ioFunctionServicesClient.upsertServiceActivation(Mockito.any(), Mockito.anyBoolean())).thenReturn(Mono.error(new RuntimeException()));
-        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(addressBookDao.deleteAddressBook(Mockito.anyString(), Mockito.any(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(new Object()));
         Mockito.when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
 
@@ -629,7 +769,7 @@ class AddressBookServiceTest {
 
         Mockito.when(addressBookDao.getAddressBook(Mockito.any())).thenReturn(Mono.just(addressBook));
         Mockito.when(ioFunctionServicesClient.upsertServiceActivation(Mockito.any(), Mockito.anyBoolean())).thenReturn(Mono.just(false));
-        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(addressBookDao.deleteAddressBook(Mockito.anyString(), Mockito.any(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(new Object()));
         Mockito.when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
 
@@ -641,7 +781,9 @@ class AddressBookServiceTest {
         //THEN
     }
 
-    @Test
+
+    @ParameterizedTest(name = "Test getAddressesByRecipient with legalChannelType {0} and address {1}, expected results: {2}")
+    @MethodSource("provideLegalChannelTypesAndAddress")
     void saveCourtesyAddressBookWithVerificationCode() {
         //GIVEN
         String recipientId = "PF-123e4567-e89b-12d3-a456-426714174000";
@@ -657,7 +799,7 @@ class AddressBookServiceTest {
 
         Mockito.when(addressBookDao.validateHashedAddress(Mockito.anyString(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(AddressBookDao.CHECK_RESULT.NOT_EXISTS));
         Mockito.when(addressBookDao.getVerificationCode(Mockito.any())).thenReturn(Mono.just(verificationCode));
-        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(pnDatavaultClient.updateRecipientAddressByInternalId(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(pnUserattributesConfig.getVerificationcodettl()).thenReturn(Duration.ofSeconds(10));
@@ -666,8 +808,8 @@ class AddressBookServiceTest {
         AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveCourtesyAddressBook(recipientId, senderId, courtesyChannelType, addressVerificationDto).block(d);
 
         //THEN
-        assertNotNull( result );
-        assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.SUCCESS, result);
+        assertNotNull(result);
+        assertEquals(SUCCESS, result);
     }
 
     @Test
@@ -746,7 +888,7 @@ class AddressBookServiceTest {
         verificationCode.setFailedAttempts(2);
 
         Mockito.when(addressBookDao.validateHashedAddress(Mockito.anyString(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(AddressBookDao.CHECK_RESULT.ALREADY_VALIDATED));
-        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(pnDatavaultClient.updateRecipientAddressByInternalId(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
 
@@ -754,17 +896,17 @@ class AddressBookServiceTest {
         AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveCourtesyAddressBook(recipientId, senderId, courtesyChannelType, addressVerificationDto).block(d);
 
         //THEN
-        assertNotNull( result );
-        assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.SUCCESS, result);
+        assertNotNull(result);
+        assertEquals(SUCCESS, result);
     }
 
 
-    @Test
-    void deleteLegalAddressBook() {
+    @ParameterizedTest(name = "Test deleteLegalAddressBook with channelType {0}")
+    @MethodSource("provideLegalChannelTypes")
+    void deleteLegalAddressBook(LegalChannelTypeDto legalChannelType) {
         //GIVEN
 
         String recipientId = "PF-123e4567-e89b-12d3-a456-426714174000";
-        LegalChannelTypeDto legalChannelType = LegalChannelTypeDto.PEC;
 
 
         Mockito.when(addressBookDao.deleteAddressBook(Mockito.anyString(), Mockito.any(), Mockito.anyString(), Mockito.anyString())).thenReturn(Mono.just(new Object()));
@@ -772,11 +914,11 @@ class AddressBookServiceTest {
 
 
         // WHEN
-        Object result = addressBookService.deleteLegalAddressBook(recipientId, null, legalChannelType, CxTypeAuthFleetDto.PF, null, null)
+        Object result = addressBookService.deleteLegalAddressBook(recipientId, null, legalChannelType, CxTypeAuthFleetDto.PF, null, null, false)
                 .block(d);
 
         //THEN
-        assertNotNull( result );
+        assertNotNull(result);
     }
 
     @Test
@@ -794,7 +936,7 @@ class AddressBookServiceTest {
                 .block(d);
 
         //THEN
-        assertNotNull( result );
+        assertNotNull(result);
     }
 
 
@@ -805,14 +947,14 @@ class AddressBookServiceTest {
 
         Mockito.when(addressBookDao.getAddressBook(Mockito.any())).thenReturn(Mono.just(new AddressBookEntity()));
         Mockito.when(ioFunctionServicesClient.upsertServiceActivation(Mockito.any(), Mockito.anyBoolean())).thenReturn(Mono.just(false));
-        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
 
         // WHEN
         Object result = addressBookService.deleteCourtesyAddressBook(recipientId, null, courtesyChannelType).block(d);
 
         //THEN
-        assertNotNull( result );
+        assertNotNull(result);
     }
 
 
@@ -823,7 +965,7 @@ class AddressBookServiceTest {
 
         Mockito.when(addressBookDao.getAddressBook(Mockito.any())).thenReturn(Mono.just(new AddressBookEntity()));
         Mockito.when(ioFunctionServicesClient.upsertServiceActivation(Mockito.any(), Mockito.anyBoolean())).thenReturn(Mono.error(new RuntimeException()));
-        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
 
         // WHEN
@@ -841,7 +983,7 @@ class AddressBookServiceTest {
 
         Mockito.when(addressBookDao.getAddressBook(Mockito.any())).thenReturn(Mono.just(new AddressBookEntity()));
         Mockito.when(ioFunctionServicesClient.upsertServiceActivation(Mockito.any(), Mockito.anyBoolean())).thenReturn(Mono.just(true));
-        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
 
         // WHEN
@@ -887,13 +1029,13 @@ class AddressBookServiceTest {
         user.setStatus(UserStatusResponse.StatusEnum.APPIO_NOT_ACTIVE);
         user.setTaxId(baseRecipientDtoDto.getTaxId());
 
-        when(addressBookDao.getAddresses(Mockito.any(),Mockito.any(),Mockito.any(), anyBoolean())).thenReturn(Flux.fromIterable(listFromDb));
+        when(addressBookDao.getAddresses(Mockito.any(), Mockito.any(), Mockito.any(), anyBoolean())).thenReturn(Flux.fromIterable(listFromDb));
         when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
         when(ioFunctionServicesClient.checkValidUsers(Mockito.any())).thenReturn(Mono.just(user));
         when(courtesyDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto1);
 
         //When
-        List<CourtesyDigitalAddressDto> result = addressBookService.getCourtesyAddressByRecipientAndSender(listFromDb.get(0).getRecipientId(),listFromDb.get(0).getSenderId()).collectList().block(d);
+        List<CourtesyDigitalAddressDto> result = addressBookService.getCourtesyAddressByRecipientAndSender(listFromDb.get(0).getRecipientId(), listFromDb.get(0).getSenderId()).collectList().block(d);
 
         //Then
         try {
@@ -942,13 +1084,13 @@ class AddressBookServiceTest {
         user.setStatus(UserStatusResponse.StatusEnum.PN_NOT_ACTIVE);
         user.setTaxId(baseRecipientDtoDto.getTaxId());
 
-        when(addressBookDao.getAddresses(Mockito.any(),Mockito.any(),Mockito.any(), Mockito.anyBoolean())).thenReturn(Flux.fromIterable(listFromDb));
+        when(addressBookDao.getAddresses(Mockito.any(), Mockito.any(), Mockito.any(), Mockito.anyBoolean())).thenReturn(Flux.fromIterable(listFromDb));
         when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
         when(ioFunctionServicesClient.checkValidUsers(Mockito.any())).thenReturn(Mono.just(user));
         when(courtesyDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto1);
 
         //When
-        List<CourtesyDigitalAddressDto> result = addressBookService.getCourtesyAddressByRecipientAndSender(listFromDb.get(0).getRecipientId(),listFromDb.get(0).getSenderId()).collectList().block(d);
+        List<CourtesyDigitalAddressDto> result = addressBookService.getCourtesyAddressByRecipientAndSender(listFromDb.get(0).getRecipientId(), listFromDb.get(0).getSenderId()).collectList().block(d);
 
         //Then
         try {
@@ -960,8 +1102,6 @@ class AddressBookServiceTest {
             fail(e);
         }
     }
-
-
 
 
     @Test
@@ -999,12 +1139,12 @@ class AddressBookServiceTest {
         user.setStatus(UserStatusResponse.StatusEnum.PN_NOT_ACTIVE);
         user.setTaxId(baseRecipientDtoDto.getTaxId());
 
-        when(addressBookDao.getAddresses(Mockito.any(),Mockito.any(),Mockito.any(), Mockito.anyBoolean())).thenReturn(Flux.fromIterable(listFromDb));
+        when(addressBookDao.getAddresses(Mockito.any(), Mockito.any(), Mockito.any(), Mockito.anyBoolean())).thenReturn(Flux.fromIterable(listFromDb));
         when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
         when(courtesyDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto1);
 
         //When
-        List<CourtesyDigitalAddressDto> result = addressBookService.getCourtesyAddressByRecipientAndSender(listFromDb.get(0).getRecipientId(),listFromDb.get(0).getSenderId()).collectList().block(d);
+        List<CourtesyDigitalAddressDto> result = addressBookService.getCourtesyAddressByRecipientAndSender(listFromDb.get(0).getRecipientId(), listFromDb.get(0).getSenderId()).collectList().block(d);
 
         //Then
         try {
@@ -1020,13 +1160,13 @@ class AddressBookServiceTest {
     }
 
     @Test
-    void isAppIoEnabledByRecipient(){
+    void isAppIoEnabledByRecipient() {
         //Given
         AddressBookEntity addressBook = AddressBookDaoTestIT.newAddress(true, null, "APPIO", true);
         addressBook.setAddresshash(AddressBookEntity.APP_IO_ENABLED);
 
 
-        when(addressBookDao.getAllAddressesByRecipient(Mockito.any(),Mockito.any())).thenReturn(Flux.fromIterable(List.of(addressBook)));
+        when(addressBookDao.getAllAddressesByRecipient(Mockito.any(), Mockito.any())).thenReturn(Flux.fromIterable(List.of(addressBook)));
 
         //When
         Boolean result = addressBookService.isAppIoEnabledByRecipient(addressBook.getRecipientId()).block(d);
@@ -1070,7 +1210,7 @@ class AddressBookServiceTest {
         user.setStatus(UserStatusResponse.StatusEnum.APPIO_NOT_ACTIVE);
         user.setTaxId(baseRecipientDtoDto.getTaxId());
 
-        when(addressBookDao.getAllAddressesByRecipient(Mockito.any(),Mockito.any())).thenReturn(Flux.fromIterable(listFromDb));
+        when(addressBookDao.getAllAddressesByRecipient(Mockito.any(), Mockito.any())).thenReturn(Flux.fromIterable(listFromDb));
         when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
         when(ioFunctionServicesClient.checkValidUsers(Mockito.any())).thenReturn(Mono.just(user));
         when(courtesyDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto1);
@@ -1084,8 +1224,6 @@ class AddressBookServiceTest {
         assertNotNull(result);
         assertEquals(2, result.size());
     }
-
-
 
 
     @Test
@@ -1123,7 +1261,7 @@ class AddressBookServiceTest {
         user.setStatus(UserStatusResponse.StatusEnum.PN_NOT_ACTIVE);
         user.setTaxId(baseRecipientDtoDto.getTaxId());
 
-        when(addressBookDao.getAllAddressesByRecipient(Mockito.any(),Mockito.any())).thenReturn(Flux.fromIterable(listFromDb));
+        when(addressBookDao.getAllAddressesByRecipient(Mockito.any(), Mockito.any())).thenReturn(Flux.fromIterable(listFromDb));
         when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
         when(ioFunctionServicesClient.checkValidUsers(Mockito.any())).thenReturn(Mono.just(user));
         when(courtesyDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto1);
@@ -1172,7 +1310,7 @@ class AddressBookServiceTest {
         user.setStatus(UserStatusResponse.StatusEnum.ERROR);
         user.setTaxId(baseRecipientDtoDto.getTaxId());
 
-        when(addressBookDao.getAllAddressesByRecipient(Mockito.any(),Mockito.any())).thenReturn(Flux.fromIterable(listFromDb));
+        when(addressBookDao.getAllAddressesByRecipient(Mockito.any(), Mockito.any())).thenReturn(Flux.fromIterable(listFromDb));
         when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
         when(ioFunctionServicesClient.checkValidUsers(Mockito.any())).thenReturn(Mono.just(user));
         when(courtesyDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto1);
@@ -1185,122 +1323,98 @@ class AddressBookServiceTest {
         assertThrows(PnInternalException.class, () -> addressBookServiceMono.block(d));
     }
 
-    @Test
-    void getLegalAddressByRecipientAndSender() {
+    @ParameterizedTest(name = "Test getLegalAddressBook with legalChannelType {0} and address {1}, expected results: {2}")
+    @MethodSource("provideLegalChannelTypesAndAddressAndResults")
+    void getLegalAddressByRecipientAndSender(LegalChannelTypeDto legalChannelType, String address, int results) {
         //Given
         List<AddressBookEntity> listFromDb = new ArrayList<>();
-        listFromDb.add(AddressBookDaoTestIT.newAddress(true));
-        listFromDb.add(AddressBookDaoTestIT.newAddress(false));
+        listFromDb.add(AddressBookDaoTestIT.newAddress(true, "default", legalChannelType.getValue(), true));
+
 
         RecipientAddressesDtoDto recipientAddressesDtoDto = new RecipientAddressesDtoDto();
         AddressDtoDto dto = new AddressDtoDto();
-        dto.setValue("email@pec.it");
+        dto.setValue(address);
         recipientAddressesDtoDto.putAddressesItem(listFromDb.get(0).getAddressId(), dto);
-        dto = new AddressDtoDto();
-        dto.setValue("email@email.it");
-        recipientAddressesDtoDto.putAddressesItem(listFromDb.get(1).getAddressId(), dto);
-
-        final LegalDigitalAddressDto resdto1 = new LegalDigitalAddressDto();
-        resdto1.setRecipientId(listFromDb.get(0).getRecipientId());
-        resdto1.setAddressType(LegalAddressTypeDto.LEGAL);
-        resdto1.setChannelType(LegalChannelTypeDto.PEC);
-        resdto1.setRecipientId(listFromDb.get(1).getRecipientId());
-        resdto1.setAddressType(LegalAddressTypeDto.LEGAL);
-        resdto1.setSenderId(listFromDb.get(1).getSenderId());
-        resdto1.setChannelType(LegalChannelTypeDto.APPIO);
-
-
-
-        when(addressBookDao.getAddresses(Mockito.any(),Mockito.any(),Mockito.any(), Mockito.anyBoolean())).thenReturn(Flux.fromIterable(listFromDb));
-        when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
-        when(legalDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto1);
 
         //When
-        List<LegalDigitalAddressDto> result = addressBookService.getLegalAddressByRecipientAndSender(listFromDb.get(0).getRecipientId(),listFromDb.get(0).getSenderId()).collectList().block(d);
+        when(addressBookDao.getAddresses(Mockito.any(), Mockito.any(), Mockito.any(), Mockito.anyBoolean())).thenReturn(Flux.fromIterable(listFromDb));
+        when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
+        when(legalDigitalAddressToDto.toDto(Mockito.any())).thenCallRealMethod();
+        lenient().when(pnUserattributesConfig.getSercqAddress()).thenReturn(SERCQ_ADDRESS);
+
 
         //Then
-        try {
-            Assertions.assertNotNull(result.get(0).getSenderId());
-            Assertions.assertEquals(2, result.size());
-            Assertions.assertTrue(result.contains(result.get(0)));
-        } catch (Exception e) {
-            fail(e);
-        }
-
-
+        Mono<List<LegalDigitalAddressDto>> result = addressBookService.getLegalAddressByRecipientAndSender(listFromDb.get(0).getRecipientId(), listFromDb.get(0).getSenderId()).collectList();
+        StepVerifier.create(result)
+                .assertNext(legalDigitalAddressDtos -> {
+                    Assertions.assertNotNull(legalDigitalAddressDtos);
+                    Assertions.assertEquals(results, legalDigitalAddressDtos.size());
+                    if (results != 0) {
+                        Assertions.assertEquals("default", legalDigitalAddressDtos.get(0).getSenderId());
+                        Assertions.assertEquals(legalChannelType, legalDigitalAddressDtos.get(0).getChannelType());
+                        Assertions.assertEquals(address, legalDigitalAddressDtos.get(0).getValue());
+                    }
+                })
+                .expectComplete()
+                .verify(d);
     }
 
 
-
-    @Test
-    void getLegalAddressByRecipient() {
+    @ParameterizedTest(name = "Test getLegalByRecipient with legalChannelType {0} and address {1}, expected results: {2}")
+    @MethodSource("provideLegalChannelTypesAndAddressAndResults")
+    void getLegalAddressByRecipient(LegalChannelTypeDto legalChannelType, String address, int results) {
         //Given
         List<AddressBookEntity> listFromDb = new ArrayList<>();
-        listFromDb.add(AddressBookDaoTestIT.newAddress(true));
-        listFromDb.add(AddressBookDaoTestIT.newAddress(false));
+        listFromDb.add(AddressBookDaoTestIT.newAddress(true, "default", legalChannelType.getValue(), true));
 
         RecipientAddressesDtoDto recipientAddressesDtoDto = new RecipientAddressesDtoDto();
         AddressDtoDto dto = new AddressDtoDto();
-        dto.setValue("email@pec.it");
+        dto.setValue(address);
         recipientAddressesDtoDto.putAddressesItem(listFromDb.get(0).getAddressId(), dto);
-        dto = new AddressDtoDto();
-        dto.setValue("email@email.it");
-        recipientAddressesDtoDto.putAddressesItem(listFromDb.get(1).getAddressId(), dto);
 
-        final LegalDigitalAddressDto resdto1 = new LegalDigitalAddressDto();
-        resdto1.setRecipientId(listFromDb.get(0).getRecipientId());
-        resdto1.setAddressType(LegalAddressTypeDto.LEGAL);
-        resdto1.setSenderId(listFromDb.get(0).getSenderId());
-        resdto1.setChannelType(LegalChannelTypeDto.PEC);
-        resdto1.setRecipientId(listFromDb.get(1).getRecipientId());
-        resdto1.setAddressType(LegalAddressTypeDto.LEGAL);
-        resdto1.setSenderId(listFromDb.get(1).getSenderId());
-        resdto1.setChannelType(LegalChannelTypeDto.APPIO);
-
-
-        when(addressBookDao.getAllAddressesByRecipient(Mockito.any(),Mockito.any())).thenReturn(Flux.fromIterable(listFromDb));
+        //Whenenv
+        when(addressBookDao.getAllAddressesByRecipient(Mockito.any(), Mockito.any())).thenReturn(Flux.fromIterable(listFromDb));
         when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
-        when(legalDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto1);
         when(addressBookDao.getAllVerificationCodesByRecipient(Mockito.anyString(), Mockito.any())).thenReturn(Flux.empty());
-
-        //When
-        List<LegalAndUnverifiedDigitalAddressDto> result = addressBookService.getLegalAddressByRecipient(listFromDb.get(0).getRecipientId(), CxTypeAuthFleetDto.PF, null, null).collectList().block(d);
+        when(legalDigitalAddressToDto.toDto(Mockito.any())).thenCallRealMethod();
+        lenient().when(pnUserattributesConfig.getSercqAddress()).thenReturn(SERCQ_ADDRESS);
 
         //Then
-        assertNotNull(result);
-        assertEquals(2, result.size());
+        Mono<List<LegalAndUnverifiedDigitalAddressDto>> result = addressBookService.getLegalAddressByRecipient(listFromDb.get(0).getRecipientId(), CxTypeAuthFleetDto.PF, null, null).collectList();
 
-
+        StepVerifier.create(result)
+                .assertNext(legalAndUnverifiedDigitalAddressDtos -> {
+                    Assertions.assertNotNull(legalAndUnverifiedDigitalAddressDtos);
+                    Assertions.assertEquals(results, legalAndUnverifiedDigitalAddressDtos.size());
+                    if(results != 0) {
+                        Assertions.assertEquals("default", legalAndUnverifiedDigitalAddressDtos.get(0).getSenderId());
+                        Assertions.assertEquals(legalChannelType, legalAndUnverifiedDigitalAddressDtos.get(0).getChannelType());
+                        Assertions.assertEquals(address, legalAndUnverifiedDigitalAddressDtos.get(0).getValue());
+                    }
+                })
+                .expectComplete()
+                .verify(d);
     }
 
 
-    @Test
-    void getLegalAddressByRecipient_WithVcs() {
-       //Given
+    @ParameterizedTest(name = "Test getLegalAddressByRecipient with legalChannelType {0}")
+    @MethodSource("provideLegalChannelTypes")
+    void getLegalAddressByRecipient_WithVcs(LegalChannelTypeDto legalChannelType) {
+        //Given
         List<AddressBookEntity> listFromDb = new ArrayList<>();
         listFromDb.add(AddressBookDaoTestIT.newAddress(true));
-        listFromDb.add(AddressBookDaoTestIT.newAddress(false));
         String recipientId = "";
 
         RecipientAddressesDtoDto recipientAddressesDtoDto = new RecipientAddressesDtoDto();
         AddressDtoDto dto = new AddressDtoDto();
         dto.setValue("email@pec.it");
         recipientAddressesDtoDto.putAddressesItem(listFromDb.get(0).getAddressId(), dto);
-        dto = new AddressDtoDto();
-        dto.setValue("email@email.it");
-        recipientAddressesDtoDto.putAddressesItem(listFromDb.get(1).getAddressId(), dto);
 
         final LegalDigitalAddressDto resdto1 = new LegalDigitalAddressDto();
         resdto1.setRecipientId(listFromDb.get(0).getRecipientId());
         recipientId = listFromDb.get(0).getRecipientId();
-        resdto1.setAddressType(LegalAddressTypeDto.LEGAL);
         resdto1.setSenderId(listFromDb.get(0).getSenderId());
-        resdto1.setChannelType(LegalChannelTypeDto.PEC);
-        resdto1.setRecipientId(listFromDb.get(1).getRecipientId());
-        resdto1.setAddressType(LegalAddressTypeDto.LEGAL);
-        resdto1.setSenderId(listFromDb.get(1).getSenderId());
-        resdto1.setChannelType(LegalChannelTypeDto.APPIO);
-
+        resdto1.setChannelType(legalChannelType);
 
 
         final List<VerificationCodeEntity> listVcs = new ArrayList<>();
@@ -1322,41 +1436,41 @@ class AddressBookServiceTest {
         listVcs.add(verificationCode1);
         listVcs.add(verificationCode2);
 
-        when(addressBookDao.getAllAddressesByRecipient(Mockito.any(),Mockito.any())).thenReturn(Flux.fromIterable(listFromDb));
-        when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
-        when(legalDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto1);
-        when(addressBookDao.getAllVerificationCodesByRecipient(Mockito.anyString(), Mockito.any())).thenReturn(Flux.fromIterable(listVcs));
-
-
-
-
-
         //When
-        List<LegalAndUnverifiedDigitalAddressDto> result = addressBookService.getLegalAddressByRecipient(listFromDb.get(0).getRecipientId(), CxTypeAuthFleetDto.PF, null, null).collectList().block(d);
+        when(addressBookDao.getAllAddressesByRecipient(Mockito.any(), Mockito.any())).thenReturn(Flux.fromIterable(listFromDb));
+        when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
+        when(addressBookDao.getAllVerificationCodesByRecipient(Mockito.anyString(), Mockito.any())).thenReturn(Flux.fromIterable(listVcs));
+        when(legalDigitalAddressToDto.toDto(Mockito.any())).thenCallRealMethod();
 
         //Then
-        assertNotNull(result);
-        assertEquals(4, result.size());
-        for (LegalAndUnverifiedDigitalAddressDto c :
-                result) {
-            for (VerificationCodeEntity vc :
-                    listVcs) {
-                if (c.getSenderId() != null && c.getSenderId().equals(listVcs.get(0).getSenderId()))
-                {
-                    assertEquals(listVcs.get(0).isCodeValid(), c.getCodeValid());
-                    assertEquals(listVcs.get(0).isPecValid(), c.getPecValid());
-                    assertNull(c.getValue());
-                    assertNotNull(c.getRequestId());
-                    assertEquals(listVcs.get(0).getRequestId(), c.getRequestId());
-                }
-            }
-        }
+        Mono<List<LegalAndUnverifiedDigitalAddressDto>> result = addressBookService.getLegalAddressByRecipient(listFromDb.get(0).getRecipientId(), CxTypeAuthFleetDto.PF, null, null).collectList();
 
+        StepVerifier.create(result)
+                .assertNext(legalAndUnverifiedDigitalAddressDtos -> {
+                    Assertions.assertNotNull(legalAndUnverifiedDigitalAddressDtos);
+                    Assertions.assertEquals(3, legalAndUnverifiedDigitalAddressDtos.size());
+                    for (LegalAndUnverifiedDigitalAddressDto c :
+                            legalAndUnverifiedDigitalAddressDtos) {
+                        for (VerificationCodeEntity vc :
+                                listVcs) {
+                            if (c.getSenderId() != null && c.getSenderId().equals(listVcs.get(0).getSenderId())) {
+                                Assertions.assertEquals(listVcs.get(0).isCodeValid(), c.getCodeValid());
+                                Assertions.assertEquals(listVcs.get(0).isPecValid(), c.getPecValid());
+                                Assertions.assertNull(c.getValue());
+                                Assertions.assertNotNull(c.getRequestId());
+                                Assertions.assertEquals(listVcs.get(0).getRequestId(), c.getRequestId());
+                            }
+                        }
+                    }
+                })
+                .expectComplete()
+                .verify(d);
     }
 
 
-    @Test
-    void getLegalAddressByRecipient_WithVcsOnly() {
+    @ParameterizedTest(name = "Test getLegalAddressByRecipient with legalChannelType {0}")
+    @MethodSource("provideLegalChannelTypes")
+    void getLegalAddressByRecipient_WithVcsOnly(LegalChannelTypeDto legalChannelType) {
         //Given
         List<AddressBookEntity> listFromDb = new ArrayList<>();
         listFromDb.add(AddressBookDaoTestIT.newAddress(true));
@@ -1374,13 +1488,9 @@ class AddressBookServiceTest {
         final LegalDigitalAddressDto resdto1 = new LegalDigitalAddressDto();
         resdto1.setRecipientId(listFromDb.get(0).getRecipientId());
         recipientId = listFromDb.get(0).getRecipientId();
-        resdto1.setAddressType(LegalAddressTypeDto.LEGAL);
         resdto1.setSenderId(listFromDb.get(0).getSenderId());
-        resdto1.setChannelType(LegalChannelTypeDto.PEC);
+        resdto1.setChannelType(legalChannelType);
         resdto1.setRecipientId(listFromDb.get(1).getRecipientId());
-        resdto1.setAddressType(LegalAddressTypeDto.LEGAL);
-        resdto1.setSenderId(listFromDb.get(1).getSenderId());
-        resdto1.setChannelType(LegalChannelTypeDto.APPIO);
 
 
 
@@ -1403,46 +1513,51 @@ class AddressBookServiceTest {
         listVcs.add(verificationCode1);
         listVcs.add(verificationCode2);
 
+        //When
         when(addressBookDao.getAllAddressesByRecipient(Mockito.any(),Mockito.any())).thenReturn(Flux.empty());
         when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
         when(addressBookDao.getAllVerificationCodesByRecipient(Mockito.anyString(), Mockito.any())).thenReturn(Flux.fromIterable(listVcs));
 
 
-        //When
-        List<LegalAndUnverifiedDigitalAddressDto> result = addressBookService.getLegalAddressByRecipient(listFromDb.get(0).getRecipientId(), CxTypeAuthFleetDto.PF, null, null).collectList().block(d);
-
         //Then
-        assertNotNull(result);
-        assertEquals(2, result.size());
-        for (LegalAndUnverifiedDigitalAddressDto c :
-                result) {
-            for (VerificationCodeEntity vc :
-                    listVcs) {
-                if (c.getSenderId() != null && c.getSenderId().equals(listVcs.get(0).getSenderId()))
-                {
-                    assertEquals(listVcs.get(0).isCodeValid(), c.getCodeValid());
-                    assertEquals(listVcs.get(0).isPecValid(), c.getPecValid());
-                    assertNull(c.getValue());
-                    assertNotNull(c.getRequestId());
-                    assertEquals(listVcs.get(0).getRequestId(), c.getRequestId());
-                }
-            }
-        }
+        Mono<List<LegalAndUnverifiedDigitalAddressDto>> result = addressBookService.getLegalAddressByRecipient(listFromDb.get(0).getRecipientId(), CxTypeAuthFleetDto.PF, null, null).collectList();
+
+        StepVerifier.create(result)
+                .assertNext(legalAndUnverifiedDigitalAddressDtos -> {
+                    Assertions.assertNotNull(legalAndUnverifiedDigitalAddressDtos);
+                    Assertions.assertEquals(2, legalAndUnverifiedDigitalAddressDtos.size());
+                    for (LegalAndUnverifiedDigitalAddressDto c :
+                            legalAndUnverifiedDigitalAddressDtos) {
+                        for (VerificationCodeEntity vc :
+                                listVcs) {
+                            if (c.getSenderId() != null && c.getSenderId().equals(listVcs.get(0).getSenderId())) {
+                                Assertions.assertEquals(listVcs.get(0).isCodeValid(), c.getCodeValid());
+                                Assertions.assertEquals(listVcs.get(0).isPecValid(), c.getPecValid());
+                                Assertions.assertNull(c.getValue());
+                                Assertions.assertNotNull(c.getRequestId());
+                                Assertions.assertEquals(listVcs.get(0).getRequestId(), c.getRequestId());
+                            }
+                        }
+                    }
+                })
+                .expectComplete()
+                .verify(d);
 
     }
 
-    @Test
-    void getAddressesByRecipient() {
+    @ParameterizedTest(name = "Test getAddressesByRecipient with legalChannelType {0} and address {1}, expected results: {2}")
+    @MethodSource("provideLegalChannelTypesAndAddressAndResults")
+    void getAddressesByRecipient(LegalChannelTypeDto legalChannelType, String address, int results) {
         //Given
         List<AddressBookEntity> listFromDbLegal = new ArrayList<>();
-        listFromDbLegal.add(AddressBookDaoTestIT.newAddress(true, "abc"));
+        listFromDbLegal.add(AddressBookDaoTestIT.newAddress(true, "abc", legalChannelType.getValue(), true));
 
         List<AddressBookEntity> listFromDbCourtesy = new ArrayList<>();
         listFromDbCourtesy.add(AddressBookDaoTestIT.newAddress(false));
 
         RecipientAddressesDtoDto recipientAddressesDtoDto = new RecipientAddressesDtoDto();
         AddressDtoDto dto = new AddressDtoDto();
-        dto.setValue("email@pec.it");
+        dto.setValue(address);
         recipientAddressesDtoDto.putAddressesItem(listFromDbLegal.get(0).getAddressId(), dto);
         dto = new AddressDtoDto();
         dto.setValue("email@email.it");
@@ -1452,7 +1567,7 @@ class AddressBookServiceTest {
         resdto1.setRecipientId(listFromDbLegal.get(0).getRecipientId());
         resdto1.setAddressType(LegalAddressTypeDto.LEGAL);
         resdto1.setSenderId(listFromDbLegal.get(0).getSenderId());
-        resdto1.setChannelType(LegalChannelTypeDto.PEC);
+        resdto1.setChannelType(legalChannelType);
 
         final CourtesyDigitalAddressDto resdto2 = new CourtesyDigitalAddressDto();
         resdto2.setRecipientId(listFromDbCourtesy.get(0).getRecipientId());
@@ -1480,35 +1595,40 @@ class AddressBookServiceTest {
         when(addressBookDao.getAllAddressesByRecipient (Mockito.any(), Mockito.eq(CourtesyAddressTypeDto.COURTESY.getValue()))).thenReturn(Flux.fromIterable(listFromDbCourtesy));
         when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
         when(ioFunctionServicesClient.checkValidUsers(Mockito.any())).thenReturn(Mono.just(user));
-        when(legalDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto1);
-        when(courtesyDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto2);
-        when(pnSelfcareClient.getManyPaByIds(Mockito.any())).thenReturn(Flux.fromIterable(paSummaries));
+        when(legalDigitalAddressToDto.toDto(Mockito.any())).thenCallRealMethod();
+        when(courtesyDigitalAddressToDto.toDto(Mockito.any())).thenCallRealMethod();
+        lenient().when(pnSelfcareClient.getManyPaByIds(Mockito.any())).thenReturn(Flux.fromIterable(paSummaries));
         when(addressBookDao.getAllVerificationCodesByRecipient(Mockito.anyString(), Mockito.any())).thenReturn(Flux.empty());
+        lenient().when(pnUserattributesConfig.getSercqAddress()).thenReturn(SERCQ_ADDRESS);
 
         //When
         UserAddressesDto result = addressBookService.getAddressesByRecipient(listFromDbCourtesy.get(0).getRecipientId(), null, null, null).block(d);
 
         //Then
         assertNotNull(result);
-        assertEquals(1, result.getLegal().size());
-        assertEquals("Fake pa", result.getLegal().get(0).getSenderName());
-        assertEquals(1, result.getCourtesy().size());
-        assertNull(result.getCourtesy().get(0).getSenderName());
+        assertEquals(results, result.getLegal().size());
+        if(results != 0) {
+            assertEquals("Fake pa", result.getLegal().get(0).getSenderName());
+            assertEquals(1, result.getCourtesy().size());
+            assertNull(result.getCourtesy().get(0).getSenderName());
+        }
     }
 
 
-    @Test
-    void getAddressesByRecipient_noPAName() {
+    @ParameterizedTest(name = "Test getAddressesByRecipient with legalChannelType {0} and address {1}, expected results: {2}")
+    @MethodSource("provideLegalChannelTypesAndAddressAndResults")
+    void getAddressesByRecipient_noPAName(LegalChannelTypeDto legalChannelType, String address, int results) {
         //Given
         List<AddressBookEntity> listFromDbLegal = new ArrayList<>();
-        listFromDbLegal.add(AddressBookDaoTestIT.newAddress(true, "abc"));
+        listFromDbLegal.add(AddressBookDaoTestIT.newAddress(true, "default", legalChannelType.getValue(), true));
+
 
         List<AddressBookEntity> listFromDbCourtesy = new ArrayList<>();
         listFromDbCourtesy.add(AddressBookDaoTestIT.newAddress(false));
 
         RecipientAddressesDtoDto recipientAddressesDtoDto = new RecipientAddressesDtoDto();
         AddressDtoDto dto = new AddressDtoDto();
-        dto.setValue("email@pec.it");
+        dto.setValue(address);
         recipientAddressesDtoDto.putAddressesItem(listFromDbLegal.get(0).getAddressId(), dto);
         dto = new AddressDtoDto();
         dto.setValue("email@email.it");
@@ -1518,7 +1638,73 @@ class AddressBookServiceTest {
         resdto1.setRecipientId(listFromDbLegal.get(0).getRecipientId());
         resdto1.setAddressType(LegalAddressTypeDto.LEGAL);
         resdto1.setSenderId(listFromDbLegal.get(0).getSenderId());
-        resdto1.setChannelType(LegalChannelTypeDto.PEC);
+        resdto1.setChannelType(legalChannelType);
+
+        final CourtesyDigitalAddressDto resdto2 = new CourtesyDigitalAddressDto();
+        resdto2.setRecipientId(listFromDbCourtesy.get(0).getRecipientId());
+        resdto2.setAddressType(CourtesyAddressTypeDto.COURTESY);
+        resdto2.setSenderId(listFromDbCourtesy.get(0).getSenderId());
+        resdto2.setChannelType(CourtesyChannelTypeDto.EMAIL);
+
+        final BaseRecipientDtoDto baseRecipientDtoDto = new BaseRecipientDtoDto();
+        baseRecipientDtoDto.setTaxId("EEEEEE00E00E000A");
+        baseRecipientDtoDto.setDenomination("utente test");
+        baseRecipientDtoDto.setRecipientType(RecipientTypeDto.PF);
+        baseRecipientDtoDto.setInternalId("123456");
+
+        final UserStatusResponse user = new UserStatusResponse();
+        user.setStatus(UserStatusResponse.StatusEnum.APPIO_NOT_ACTIVE);
+        user.setTaxId(baseRecipientDtoDto.getTaxId());
+
+
+        when(addressBookDao.getAllAddressesByRecipient (Mockito.any(), Mockito.eq(LegalAddressTypeDto.LEGAL.getValue()))).thenReturn(Flux.fromIterable(listFromDbLegal));
+        when(addressBookDao.getAllAddressesByRecipient (Mockito.any(), Mockito.eq(CourtesyAddressTypeDto.COURTESY.getValue()))).thenReturn(Flux.fromIterable(listFromDbCourtesy));
+        when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
+        when(ioFunctionServicesClient.checkValidUsers(Mockito.any())).thenReturn(Mono.just(user));
+        when(legalDigitalAddressToDto.toDto(Mockito.any())).thenCallRealMethod();
+        when(courtesyDigitalAddressToDto.toDto(Mockito.any())).thenCallRealMethod();
+        lenient().when(pnSelfcareClient.getManyPaByIds(Mockito.any())).thenReturn(Flux.empty());
+        when(addressBookDao.getAllVerificationCodesByRecipient(Mockito.anyString(), Mockito.any())).thenReturn(Flux.empty());
+        lenient().when(pnUserattributesConfig.getSercqAddress()).thenReturn(SERCQ_ADDRESS);
+
+        //When
+        UserAddressesDto result = addressBookService.getAddressesByRecipient(listFromDbCourtesy.get(0).getRecipientId(), null, null, null).block(d);
+
+        //Then
+        assertNotNull(result);
+        assertEquals(results, result.getLegal().size());
+        if(results != 0) {
+            assertNull(result.getLegal().get(0).getSenderName());
+            assertEquals(1, result.getCourtesy().size());
+            assertNull(result.getCourtesy().get(0).getSenderName());
+        }
+    }
+
+
+
+    @ParameterizedTest(name = "Test getAddressesByRecipient with legalChannelType {0} and address {1}, expected results: {2}")
+    @MethodSource("provideLegalChannelTypesAndAddressAndResults")
+    void getAddressesByRecipient_defaultOnly(LegalChannelTypeDto legalChannelType, String address, int results) {
+        //Given
+        List<AddressBookEntity> listFromDbLegal = new ArrayList<>();
+        listFromDbLegal.add(AddressBookDaoTestIT.newAddress(true, "default", legalChannelType.getValue(), true));
+
+        List<AddressBookEntity> listFromDbCourtesy = new ArrayList<>();
+        listFromDbCourtesy.add(AddressBookDaoTestIT.newAddress(false));
+
+        RecipientAddressesDtoDto recipientAddressesDtoDto = new RecipientAddressesDtoDto();
+        AddressDtoDto dto = new AddressDtoDto();
+        dto.setValue(address);
+        recipientAddressesDtoDto.putAddressesItem(listFromDbLegal.get(0).getAddressId(), dto);
+        dto = new AddressDtoDto();
+        dto.setValue("email@email.it");
+        recipientAddressesDtoDto.putAddressesItem(listFromDbCourtesy.get(0).getAddressId(), dto);
+
+        final LegalDigitalAddressDto resdto1 = new LegalDigitalAddressDto();
+        resdto1.setRecipientId(listFromDbLegal.get(0).getRecipientId());
+        resdto1.setAddressType(LegalAddressTypeDto.LEGAL);
+        resdto1.setSenderId(listFromDbLegal.get(0).getSenderId());
+        resdto1.setChannelType(legalChannelType);
 
         final CourtesyDigitalAddressDto resdto2 = new CourtesyDigitalAddressDto();
         resdto2.setRecipientId(listFromDbCourtesy.get(0).getRecipientId());
@@ -1543,86 +1729,27 @@ class AddressBookServiceTest {
         when(ioFunctionServicesClient.checkValidUsers(Mockito.any())).thenReturn(Mono.just(user));
         when(legalDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto1);
         when(courtesyDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto2);
-        when(pnSelfcareClient.getManyPaByIds(Mockito.any())).thenReturn(Flux.empty());
         when(addressBookDao.getAllVerificationCodesByRecipient(Mockito.anyString(), Mockito.any())).thenReturn(Flux.empty());
+        lenient().when(pnUserattributesConfig.getSercqAddress()).thenReturn(SERCQ_ADDRESS);
 
         //When
         UserAddressesDto result = addressBookService.getAddressesByRecipient(listFromDbCourtesy.get(0).getRecipientId(), null, null, null).block(d);
 
         //Then
         assertNotNull(result);
-        assertEquals(1, result.getLegal().size());
-        assertNull(result.getLegal().get(0).getSenderName());
-        assertEquals(1, result.getCourtesy().size());
-        assertNull(result.getCourtesy().get(0).getSenderName());
+        assertEquals(results, result.getLegal().size());
+        if(results != 0) {
+            assertNull(result.getLegal().get(0).getSenderName());
+            assertEquals(1, result.getCourtesy().size());
+            assertNull(result.getCourtesy().get(0).getSenderName());
+        }
     }
 
-
-
-    @Test
-    void getAddressesByRecipient_defaultOnly() {
-        //Given
-        List<AddressBookEntity> listFromDbLegal = new ArrayList<>();
-        listFromDbLegal.add(AddressBookDaoTestIT.newAddress(true));
-
-        List<AddressBookEntity> listFromDbCourtesy = new ArrayList<>();
-        listFromDbCourtesy.add(AddressBookDaoTestIT.newAddress(false));
-
-        RecipientAddressesDtoDto recipientAddressesDtoDto = new RecipientAddressesDtoDto();
-        AddressDtoDto dto = new AddressDtoDto();
-        dto.setValue("email@pec.it");
-        recipientAddressesDtoDto.putAddressesItem(listFromDbLegal.get(0).getAddressId(), dto);
-        dto = new AddressDtoDto();
-        dto.setValue("email@email.it");
-        recipientAddressesDtoDto.putAddressesItem(listFromDbCourtesy.get(0).getAddressId(), dto);
-
-        final LegalDigitalAddressDto resdto1 = new LegalDigitalAddressDto();
-        resdto1.setRecipientId(listFromDbLegal.get(0).getRecipientId());
-        resdto1.setAddressType(LegalAddressTypeDto.LEGAL);
-        resdto1.setSenderId(listFromDbLegal.get(0).getSenderId());
-        resdto1.setChannelType(LegalChannelTypeDto.PEC);
-
-        final CourtesyDigitalAddressDto resdto2 = new CourtesyDigitalAddressDto();
-        resdto2.setRecipientId(listFromDbCourtesy.get(0).getRecipientId());
-        resdto2.setAddressType(CourtesyAddressTypeDto.COURTESY);
-        resdto2.setSenderId(listFromDbCourtesy.get(0).getSenderId());
-        resdto2.setChannelType(CourtesyChannelTypeDto.EMAIL);
-
-        final BaseRecipientDtoDto baseRecipientDtoDto = new BaseRecipientDtoDto();
-        baseRecipientDtoDto.setTaxId("EEEEEE00E00E000A");
-        baseRecipientDtoDto.setDenomination("utente test");
-        baseRecipientDtoDto.setRecipientType(RecipientTypeDto.PF);
-        baseRecipientDtoDto.setInternalId("123456");
-
-        final UserStatusResponse user = new UserStatusResponse();
-        user.setStatus(UserStatusResponse.StatusEnum.APPIO_NOT_ACTIVE);
-        user.setTaxId(baseRecipientDtoDto.getTaxId());
-
-
-        when(addressBookDao.getAllAddressesByRecipient (Mockito.any(), Mockito.eq(LegalAddressTypeDto.LEGAL.getValue()))).thenReturn(Flux.fromIterable(listFromDbLegal));
-        when(addressBookDao.getAllAddressesByRecipient (Mockito.any(), Mockito.eq(CourtesyAddressTypeDto.COURTESY.getValue()))).thenReturn(Flux.fromIterable(listFromDbCourtesy));
-        when(pnDatavaultClient.getRecipientAddressesByInternalId(Mockito.any())).thenReturn(Mono.just(recipientAddressesDtoDto));
-        when(ioFunctionServicesClient.checkValidUsers(Mockito.any())).thenReturn(Mono.just(user));
-        when(legalDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto1);
-        when(courtesyDigitalAddressToDto.toDto(Mockito.any())).thenReturn(resdto2);
-        when(addressBookDao.getAllVerificationCodesByRecipient(Mockito.anyString(), Mockito.any())).thenReturn(Flux.empty());
-
-        //When
-        UserAddressesDto result = addressBookService.getAddressesByRecipient(listFromDbCourtesy.get(0).getRecipientId(), null, null, null).block(d);
-
-        //Then
-        assertNotNull(result);
-        assertEquals(1, result.getLegal().size());
-        assertNull(result.getLegal().get(0).getSenderName());
-        assertEquals(1, result.getCourtesy().size());
-        assertNull(result.getCourtesy().get(0).getSenderName());
-    }
-
-    @Test
-    void saveNotRootId() {
+    @ParameterizedTest(name = "Test saveNotRootId with legalChannelType {0}")
+    @MethodSource("provideLegalChannelTypes")
+    void saveNotRootId(LegalChannelTypeDto legalChannelType) {
         //GIVEN
         String recipientId = "PF-123e4567-e89b-12d3-a456-426714174000";
-        LegalChannelTypeDto legalChannelType = LegalChannelTypeDto.PEC;
         AddressVerificationDto addressVerificationDto = new AddressVerificationDto();
         addressVerificationDto.setValue("prova@prova.it");
 
@@ -1633,8 +1760,8 @@ class AddressBookServiceTest {
 
         PnInvalidInputException thrown = assertThrows(
                 PnInvalidInputException.class,
-            () -> addressBookService.saveLegalAddressBook(recipientId, "NOTROOT", legalChannelType, addressVerificationDto, CxTypeAuthFleetDto.PF, null, null).block(),
-            "Expected saveLegalAddressBook() to throw, but it didn't"
+                () -> addressBookService.saveLegalAddressBook(recipientId, "NOTROOT", legalChannelType, addressVerificationDto, CxTypeAuthFleetDto.PF, null, null, null).block(),
+                "Expected saveLegalAddressBook() to throw, but it didn't"
         );
 
         List<String> errorCodes = new ArrayList<>();
@@ -1652,17 +1779,17 @@ class AddressBookServiceTest {
 
         Mockito.when(addressBookDao.getAddressBook(Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(ioFunctionServicesClient.upsertServiceActivation(Mockito.any(), Mockito.anyBoolean())).thenReturn(Mono.just(true));
-        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(ioNotificationService.scheduleCheckNotificationToSendAfterIOActivation(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
-        Mockito.when(pnExternalRegistryClient.getAooUoIdsApi(Arrays.asList(ROOT_SENDER))).thenReturn(Flux.empty());
+        Mockito.when(pnExternalRegistryClient.getAooUoIdsApi(List.of(ROOT_SENDER))).thenReturn(Flux.empty());
 
         // WHEN
         AddressBookService.SAVE_ADDRESS_RESULT result = addressBookService.saveCourtesyAddressBook(recipientId, ROOT_SENDER, courtesyChannelType, new AddressVerificationDto()).block(d);
 
         //THEN
         assertNotNull( result );
-        assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.SUCCESS, result);
+        assertEquals(SUCCESS, result);
     }
 
     @Test
@@ -1675,7 +1802,7 @@ class AddressBookServiceTest {
 
         Mockito.when(addressBookDao.getAddressBook(Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(ioFunctionServicesClient.upsertServiceActivation(Mockito.any(), Mockito.anyBoolean())).thenReturn(Mono.just(true));
-        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
+        Mockito.when(addressBookDao.saveAddressBookAndVerifiedAddress(Mockito.any(), Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(ioNotificationService.scheduleCheckNotificationToSendAfterIOActivation(Mockito.any(), Mockito.any())).thenReturn(Mono.empty());
         Mockito.when(addressBookDao.deleteVerificationCode(Mockito.any())).thenReturn(Mono.empty());
 
@@ -1684,6 +1811,50 @@ class AddressBookServiceTest {
 
         //THEN
         assertNotNull( result );
-        assertEquals(AddressBookService.SAVE_ADDRESS_RESULT.SUCCESS, result);
+        assertEquals(SUCCESS, result);
+    }
+
+
+
+    private static Stream<Arguments> provideLegalChannelTypes() {
+        return Stream.of(
+                Arguments.of(LegalChannelTypeDto.PEC),
+                Arguments.of(LegalChannelTypeDto.APPIO),
+                Arguments.of(LegalChannelTypeDto.SERCQ)
+        );
+    }
+
+
+    private static Stream<Arguments> provideLegalChannelTypesAndResults() {
+        return Stream.of(
+                Arguments.of(LegalChannelTypeDto.PEC,PEC_VALIDATION_REQUIRED, LEGAL_ADDRESS),
+                Arguments.of(LegalChannelTypeDto.APPIO,SUCCESS, COURTESY_ADDRESS),
+                Arguments.of(LegalChannelTypeDto.SERCQ,SUCCESS, ADDRESS_SERCQ)
+        );
+    }
+
+    private static Stream<Arguments> provideLegalChannelTypesAndAddressAndResults() {
+        return Stream.of(
+                Arguments.of(LegalChannelTypeDto.PEC,LEGAL_ADDRESS,1),
+                Arguments.of(LegalChannelTypeDto.APPIO,COURTESY_ADDRESS,1),
+                Arguments.of(LegalChannelTypeDto.SERCQ,SERCQ_ADDRESS,1)
+
+        );
+    }
+
+    public static Stream<Arguments> provideLegalChannelTypesAndAddress() {
+        return Stream.of(
+                Arguments.of(LegalChannelTypeDto.PEC,LEGAL_ADDRESS),
+                Arguments.of(LegalChannelTypeDto.APPIO,COURTESY_ADDRESS),
+                Arguments.of(LegalChannelTypeDto.SERCQ,SERCQ_ADDRESS)
+
+        );
+    }
+    public static Stream<Arguments> provideLegalChannelTypesAndAddressForVerificationCode() {
+        return Stream.of(
+                Arguments.of(LegalChannelTypeDto.PEC,LEGAL_ADDRESS),
+                Arguments.of(LegalChannelTypeDto.APPIO,COURTESY_ADDRESS)
+
+        );
     }
 }
